--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,18 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit:ital,wght@0,100;0,200;0,400;0,600;0,700;1,100;1,200;1,300;1,600&family=PT+Sans+Narrow&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400;1,700&family=Rubik:ital,wght@0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 .container {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: #272727;
   color: white;
   font-family: 'PT Sans Narrow', sans-serif;
+  overflow-y: auto; 
+  overflow-x: hidden;
 }
 
 .header {
   width: 100%;
- 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -22,23 +24,29 @@
     align-items: center;
 }
 .header .left-side .introduction{
+    width: 100vw;
     font-family: 'Bebas Neue', cursive;
     font-size: 5.5rem;
+    background-color: #2b4994;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.laptop-gif{
+    width: 100px;
 }
 .download-cv{
     
    
     font-weight: 500;
     color: white;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin-top: .1rem;
     cursor: pointer;
     width: fit-content;
-    padding: .4rem;
+    padding: .8rem;
     border-radius: 10px;
-    
-    background: rgb(213,48,45);
-    background: linear-gradient(135deg, rgba(213,48,45,1) 7%, rgba(255,138,0,1) 87%);
+    background-color: #5680e9aa;
 }
 a{
     text-decoration: none;
@@ -54,14 +62,24 @@ a{
     font-size: 1.4rem;
 }
 .download-cv:hover{
-    
+    background-color: #5680E9;
     transform: scale(1.09);
     transition: .4s;
-   }
-   .further-introduction{
-    font-size: 2rem;
-    width: 70%;
+}
+.further-introduction{
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    text-align: right;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1.7rem;
+    width: 60%;
     padding: 1rem 0rem 1rem 0rem;
+}
+
+.bigger-font{
+    text-align: left;
+    font-size: 2rem;
 }
 
 .projects {
@@ -70,7 +88,17 @@ a{
   align-items: center;
   justify-content: center;
   flex:1 0 auto;
+  gap: 1rem;
   font-size: 4rem;
+  margin-bottom: 5rem;
+}
+.projects-container{
+    width: 60%;
+    display: grid; 
+    grid-template-columns:repeat(2, 1fr) ;
+    gap: 2rem;
+    justify-content: center;
+    justify-items: center;
 }
 
 .maincontainer {
@@ -88,16 +116,17 @@ a{
   height: 100%;
   transform-style: preserve-3d;
   transition: all 0.5s ease;
-  background-color: #5680E9;
+  
 }
 
 .front-card {
+    cursor: pointer;
     border-radius: 20px;
     position: absolute;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
+    backface-visibility: hidden;
     background-color: #5680E9;
     font-family: "Bebas Neue", cursive;
     font-size: 3.8rem;
@@ -114,7 +143,7 @@ a{
   height: 100%;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  background-color: #5680E9;
+  background-color: #2b4994;
   transform: rotateX(180deg);
   display: flex;
   flex-direction: column;
@@ -123,7 +152,7 @@ a{
     padding: 1rem;
     margin-top: 20px;
     flex: 1 0 auto;
-    background-color: #5680E9;
+    background-color: #2b4994;
 }
 .back-card img {
   width: 2.2rem;
@@ -141,4 +170,151 @@ a{
     text-decoration: none;
     color: white;
     font-size: 2rem;
+}
+
+.prevent-select {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+
+
+.contact{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+}
+.contact .text{
+    font-size: 4rem;
+}
+.copy-email{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3rem;
+    margin-bottom: 10rem;
+}
+.copy-email .copy-icon img{
+    width: 40px;
+}
+.mail-text{
+    font-size: 2.3rem;
+    
+}
+.copy-icon{
+    cursor: pointer;
+
+}
+.copy-icon:hover{
+    transform: scale(1.09);
+}
+
+.footer{
+    background-color: #2b4994;
+    width: 100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;   
+}
+.footer .link a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 1.5rem;
+    
+}
+.footer .link img{
+    width: 30px;
+    margin-right: .5rem;
+}
+
+.dynamic-text span{
+    
+    position: relative;
+   }
+.dynamic-text span::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #2b4994;
+    border-left: 2px solid white;
+    animation: typing 2.5s steps(17) forwards;
+}
+
+
+
+@keyframes typing {
+    100% {
+        left: 100%;
+        
+    }
+}
+
+
+@keyframes hide-cursor {
+    100% {
+        opacity: 0;
+    }
+}
+
+.dynamic-text span::after {
+    animation: typing 1.5s steps(17) forwards, hide-cursor 1s 1.5s forwards; /* Dodano animację "hide-cursor" z opóźnieniem 1,5 sekundy po zakończeniu animacji "typing" */
+}
+
+
+
+
+
+
+
+
+
+/* reset css */
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
