--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -73,7 +73,7 @@ a{
     text-align: right;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 1.7rem;
-    width: 60%;
+    width: 500px;
     padding: 1rem 0rem 1rem 0rem;
 }
 
@@ -266,7 +266,18 @@ a{
 }
 
 
+.fade-in{
+    opacity: 0;
+    animation: fadeIn 1.2s ease-in forwards;
+}
 
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+    }to{
+        opacity:1;
+    }
+}
 
 
 
