--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -56,10 +56,10 @@ a{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 2rem;
+    font-size: 2.2rem;
 }
 .technologies > * {
-    font-size: 1.4rem;
+    font-size: 1.7rem;
 }
 .download-cv:hover{
     background-color: #5680E9;
@@ -91,6 +91,7 @@ a{
   gap: 1rem;
   font-size: 4rem;
   margin-bottom: 5rem;
+  margin-top: 2.3rem;
 }
 .projects-container{
     width: 60%;
@@ -211,6 +212,7 @@ a{
 }
 
 .footer{
+    margin-top: auto;
     background-color: #2b4994;
     width: 100%;
     display:flex;
@@ -266,16 +268,46 @@ a{
 }
 
 
-.fade-in{
-    opacity: 0;
-    animation: fadeIn 1.2s ease-in forwards;
+    .fade-in{
+        opacity: 0;
+        animation: fadeIn 1.2s ease-in forwards;
+    }
+    
+    @keyframes fadeIn{
+        from{
+            opacity: 0;
+        }to{
+            opacity:1;
+        }
+    }
+
+
+
+
+@media (max-width: 760px) {
+    .projects-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .fade-in{
+        opacity: 1;
+        animation: none;
+    }
 }
 
-@keyframes fadeIn{
-    from{
-        opacity: 0;
-    }to{
-        opacity:1;
+@media (max-width: 500px) {
+    .further-introduction{
+        width: 90%;
+    }
+    .contact .text{
+        font-size: 4rem;
+    }
+    .mail-text{
+        font-size: 1.5rem;
+    }
+    .introduction span{
+        font-size: 4rem;
     }
 }
 
