--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ a{
 .projects-container{
     width: 60%;
     display: grid; 
-    grid-template-columns:repeat(2, 1fr) ;
+    grid-template-columns:repeat(auto-fit, minmax(400px,1fr)) ;
     gap: 2rem;
     justify-content: center;
     justify-items: center;
