--- a/src/index.css
+++ b/src/index.css
@@ -131,15 +131,42 @@ a{
     position: absolute;
     width: 100%;
     height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    background-color: #5680E9;
+     -webkit-backface-visibility: hidden;
+    backface-visibility: hidden; 
+   
     font-family: "Bebas Neue", cursive;
     font-size: 3.8rem;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    
 }
+
+.title{
+    color: rgb(255, 255, 255);
+    z-index: 1000;
+}
+.description{
+    color: rgb(255, 255, 255);
+    z-index: 1000;
+    font-weight: 500;
+}
+
+.angular{
+    background-image: url('./images/angular.png');
+    background-size: cover;
+}
+.js{
+    background-image: url('./images/js.png');
+    background-size: cover;
+}
+
+.react{
+    background-image: url('./images/react.png');
+    background-size: cover;
+}
+
 
 .back-card {
     border-radius: 20px;
@@ -149,7 +176,7 @@ a{
   height: 100%;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  background-color: #2b4994;
+  background-color: #00000000;
   transform: rotateX(180deg);
   display: flex;
   flex-direction: column;
@@ -158,7 +185,7 @@ a{
     padding: 1rem;
     margin-top: 20px;
     flex: 1 0 auto;
-    background-color: #2b4994;
+    
 }
 .back-card img {
   width: 2.2rem;
