--- a/src/index.css
+++ b/src/index.css
@@ -148,9 +148,16 @@ a{
     z-index: 1000;
 }
 .description{
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     z-index: 1000;
-    font-weight: 500;
+    font-weight: 400;
+    background-color: #ffffff7c;
+}
+.black{
+    color: rgb(0, 0, 0);
+    font-weight: 400;
+    background-color: #ffffff7c;
+    text-shadow: .3px .3px #5d5959;
 }
 
 .angular{
@@ -249,6 +256,7 @@ a{
     background-color: #ffffff;
     width: 100%;
     display:flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;   
 }
@@ -265,6 +273,8 @@ a{
     width: 30px;
     margin-right: .5rem;
 }
+.footer .info{
+    color:black;}
 
 .dynamic-text span{
     
